--- a/LoginApp/app/src/main/res/values/dimens.xml
+++ b/LoginApp/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin">16dp</dimen>
     <dimen name="margins">16dp</dimen>
+    <dimen name="yazi_boyutu">30sp</dimen>
 </resources>
